--- a/index.html
+++ b/index.html
@@ -7,19 +7,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma" />
     <link rel="stylesheet" href="style.css">
     <title>Resume Generator</title>
 </head>
 
 <body onload="move('draggable')">
+
+    <!-- Landing page -->
+    <div id="mainpage">
+
+
+        <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" id="nav" style="display: none; z-index: 2; width: 40%; min-width: 300px" id="mySidebar">
+            <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">Close Menu</a
+      >
+      <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button"
+        >Food</a
+      >
+      <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button"
+        >About</a
+      >
+    </nav>
+
+    <!-- Top menu -->
+    <div class="w3-top">
+      <div class="w3-white w3-xlarge" style="max-width: 1200px; margin: auto">
+        <div class="w3-center w3-padding-16" style="font-size: 50px">
+          Easy CV
+        </div>
+      </div>
+    </div>
+
+    <!-- !PAGE CONTENT! -->
+    <div
+      class="w3-main w3-content w3-padding"
+      style="max-width: 1200px; margin-top: 100px"
+    >
+      <!-- First Photo Grid-->
+      <div class="w3-row-padding w3-padding-16 w3-center landing text-center" id="food">
+        <div class="w3-quarter">
+          <img src="./images/resume1.png" alt="Sandwich" style="width: 100%" class="temp-img" />
+          <!-- <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+          <p>
+            Just some random text, lorem ipsum text praesent tincidunt ipsum
+            lipsum.
+          </p> -->
+        </div>
+        <div class="w3-quarter">
+          <img src="./images/resume2.png" alt="Steak" style="width: 100%" class="temp-img"/>
+          <!-- <h3>Let Me Tell You About This Steak</h3>
+          <p>
+            Once again, some random text to lorem lorem lorem lorem ipsum text
+            praesent tincidunt ipsum lipsum.
+          </p> -->
+        </div>
+        <div class="w3-quarter">
+          <img src="./images/resume3.png" alt="Cherries" style="width: 100%" class="temp-img"/>
+          <!-- <h3>Cherries, interrupted</h3>
+          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+          <p>What else?</p> -->
+        </div>
+        <div class="w3-quarter">
+          <img src="./images/resume4.png" alt="Pasta and Wine" style="width: 100%" class="temp-img"/>
+          <!-- <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p> -->
+        </div>
+      </div>
+
+      <div class="w3-center w3-padding-16" style="font-size: 50px">
+        Enter details below ...
+      </div>
+
+
+      
+    </div>
+</div>
+
+    <!-- Landing page end -->
+
+
+
+    <!-- Input from for data -->
     <div class="container" id="cv-form">
 
-        <div class="row my-4">
+        <div class="row my-5 y-15">
             <div class="col-md-6">
 
-                <h1 class="text-center my-2">Resume Generator</h1>
-                <img src="./1.png" alt="">
+                
+                <h1>Fill the info to Generate CV</h1>
 
 
             </div>
@@ -88,7 +164,7 @@
             </div>
         </div>
         <div class="container text-center mt-2">
-            <button onclick="generateCV()" class="btn btn-primary btn-lg">Generate CV</button>
+            <button onclick="generateCV()" class="btn btn-primary btn-lg mb-4">Generate CV</button>
         </div>
     </div>
 
@@ -100,7 +176,7 @@
         <div class="col-md-2 text-center py-5" id="prev-temp"><button class="btn btn-success text-center prev-temp">Prev</button></div>
 
 
-        <div class="col-md-6 container flex" id="cv-template-1">
+        <div class="col-md-6 container" id="cv-template-1">
             <div class="container">
 
                 <div class="row">
@@ -116,78 +192,78 @@
                             <p id="fbT">
                                 <a href="#1">
                                 fb</a>
-                            </p>
-                            <p id="linkT">
-                                <a href="#1">linkedIn</a>
-                            </p>
-                        </div>
-                    </div>
+            </p>
+            <p id="linkT">
+                <a href="#1">linkedIn</a>
+            </p>
+    </div>
+    </div>
 
 
-                    <div class="col-md-8 py-5" id="mydivheader">
-                        <!-- second column -->
-                        <h1 id="nameT2" class="text-center" style="font-weight:900 ;">Maggi Pandit
-                        </h1>
+    <div class="col-md-8 py-5" id="mydivheader">
+        <!-- second column -->
+        <h1 id="nameT2" class="text-center" style="font-weight:900 ;">Maggi Pandit
+        </h1>
 
-                        <!-- for objective -->
-                        <div class="card obj draggable" id="mydiv">
-                            <div class="card-header">
-                                <h3>Objective</h3>
-                            </div>
-                            <div class="card-body">
-                                <p id="objectiveT"></p>
-                            </div>
-                        </div>
-
-                        <!-- for work Experience -->
-
-                        <div class="card mt-4 exp draggable" id="mydiv">
-                            <div class="card-header">
-                                <h3>Work Experience</h3>
-                            </div>
-                            <div class="card-body">
-                                <ul id="weT">
-                                    <li>
-
-                                    </li>
-
-                            </div>
-                        </div>
-
-                        <!-- for academic qualification -->
-
-                        <div class="card mt-4 quo draggable" id="mydiv">
-                            <div class="card-header">
-                                <h3> Academic Qualification </h3>
-                            </div>
-                            <div class="card-body">
-                                <ul id="aqT">
-                                    <li>
-
-                                    </li>
-
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
+        <!-- for objective -->
+        <div class="card obj draggable" id="mydiv">
+            <div class="card-header">
+                <h3>Objective</h3>
+            </div>
+            <div class="card-body">
+                <p id="objectiveT"></p>
             </div>
         </div>
 
+        <!-- for work Experience -->
 
+        <div class="card mt-4 exp draggable" id="mydiv">
+            <div class="card-header">
+                <h3>Work Experience</h3>
+            </div>
+            <div class="card-body">
+                <ul id="weT">
+                    <li>
 
+                    </li>
 
-
-        <div class="col-md-2 py-5" id="next-temp"><button class="btn btn-success text-center next-temp">Next</button></div>
-
-
-        <!-- style="margin-right: 12%;" -->
-        <div class="container mt-3 text-center" id="btnGroup">
-            <button onclick="printCV()" class="btn btn-primary static">Print </button>
-            <button onclick="resetCV()" class="btn btn-primary static">Reset </button>
+            </div>
         </div>
+
+        <!-- for academic qualification -->
+
+        <div class="card mt-4 quo draggable" id="mydiv">
+            <div class="card-header">
+                <h3> Academic Qualification </h3>
+            </div>
+            <div class="card-body">
+                <ul id="aqT">
+                    <li>
+
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+    <div class="col-md-2 py-5" id="next-temp"><button class="btn btn-success text-center next-temp">Next</button></div>
+
+
+    <!-- style="margin-right: 12%;" -->
+    <div class="container mt-3 text-center" id="btnGroup">
+        <button onclick="printCV()" class="btn btn-primary static left">Print </button>
+        <button onclick="resetCV()" class="btn btn-primary static">Reset </button>
+    </div>
 
     </div>
 
